Documentation/00_Official_Baseline/v0.3/99_Source_Markdown/Cartridge_And_Cloud_Legal_Credits_Licenses_Register_v0.3.md
---
title: "Cartridge & Cloud - Legal / Credits / Licenses Register"
subtitle: "Política legal, plantilla de registro y preparación de créditos"
author: "VRM Games / Blas Luis Rocha González"
date: "21/06/2026"
lang: es-ES
papersize: a4
fontsize: 10pt
geometry: margin=18mm
toc: true
toc-depth: 3
colorlinks: true
linkcolor: VRMGreen
urlcolor: VRMGreen
citecolor: VRMGreen
header-includes:
- |
  ```{=latex}
  \usepackage{xcolor}
  \definecolor{VRMGreen}{HTML}{008F46}
  \definecolor{VRMDark}{HTML}{101716}
  \definecolor{VRMGray}{HTML}{5B6660}
  \usepackage{sectsty}
  \sectionfont{\color{VRMGreen}}
  \subsectionfont{\color{VRMDark}}
  \subsubsectionfont{\color{VRMGray}}
  \usepackage{fancyhdr}
  \pagestyle{fancy}
  \fancyhf{}
  \fancyhead[L]{\small Cartridge \& Cloud - Documento interno}
  \fancyhead[R]{\small VRM Games}
  \fancyfoot[C]{\thepage}
  \setlength{\headheight}{14pt}
  \usepackage{enumitem}
  \setlist{nosep}
  \usepackage{longtable}
  \usepackage{booktabs}
  \usepackage{array}
  \renewcommand{\arraystretch}{1.15}
  ```
---

**Proyecto:** Cartridge & Cloud  
**Título técnico provisional:** Cartridge & Cloud  
**Plataforma inicial:** PC / Steam  
**Motor previsto:** Unity 6 LTS / C#  
**Versión del documento:** v0.3  
**Estado:** Preproducción reiniciada desde cero  
**Fuente conceptual:** `Enfoque_v0.6.md`  

> **Regla de interpretación:** el proyecto se documenta como una preproducción nueva. No se presupone código, escenas, managers, datos, builds ni sprints implementados. Todo elemento técnico descrito es una especificación o recomendación hasta que exista evidencia de implementación y QA.

\newpage

# 1. Regla de seguridad

Ningún recurso entra en build pública, Steam, trailer, web o press kit sin origen, licencia, uso comercial, atribución y evidencia registrados.

# 2. Categorías

Arte, audio, fuentes, plugins, paquetes Unity, código externo, IA generativa, traducción, colaboración, testing, marketing y documentación.

# 3. Estados

Aprobado, Pendiente, Temporal, Reemplazar, Prohibido y Retirado.

# 4. Campos del registro

ID, recurso, categoría, autor/proveedor, fuente, versión, licencia, uso permitido, modificación, redistribución, atribución, evidencia, fecha, ubicación, estado, riesgo y responsable.

# 5. Política de IA generativa

Registrar herramienta, fecha, prompt/resumen, edición humana, destino, términos aplicables y revisión de similitud. No usar como prueba de propiedad exclusiva ni imitar deliberadamente marcas o artistas vivos.

# 6. Marcas y nombres

`Cartridge & Cloud` es provisional. Antes de Steam, dominios o campañas debe realizarse búsqueda de marca, nombre comercial, redes y posibles conflictos. Los cinco candidatos históricos se conservan internamente.

# 7. Marcas ficticias

Productos, plataformas, transportistas y competidores deben usar nombres propios revisados para evitar confusión con empresas reales.

# 8. Colaboradores

Toda aportación que entre en producto o marketing requiere autorización escrita sobre uso comercial, modificación, crédito y compensación si procede.

# 9. Fuentes

No redistribuir fuentes salvo licencia expresa. Registrar archivos, versión y alcance. Preferir licencias OFL o equivalentes revisadas.

# 10. Open source y plugins

Conservar LICENSE/NOTICE, versión, repositorio, modificaciones y obligaciones. Revisar compatibilidad antes de actualizar.

# 11. Créditos

Secciones previstas: dirección/desarrollo, arte, audio, QA, traducción, herramientas, software de terceros, assets y agradecimientos.

# 12. Checklist público

- [ ] Nombre validado.
- [ ] Todos los assets finales aprobados.
- [ ] Textos de atribución incluidos.
- [ ] Música y trailer con licencia comercial.
- [ ] Capturas sin contenido de terceros no autorizado.
- [ ] Política de privacidad si se recopilan datos.
- [ ] Términos de servicios online antes de plataforma real.
- [ ] Requisitos Steam revalidados en fuentes oficiales.
